--- a/_config.yml
+++ b/_config.yml
@@ -79,5 +79,5 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
    type: git
-   repo: https://github.com/BeliefRC/BeliefRC.github.io.git
+   repo: git@github.com:BeliefRC/BeliefRC.github.io.git
    branch: master
